--- a/views/widget.xml
+++ b/views/widget.xml
@@ -1,5 +1,5 @@
 <Alloy>
     <View>
-        <Picker id="picker" selectionIndicator="true" onChange="_onChange"/>
+        <Picker id="picker" selectionIndicator="true" onChange="_onChange" platform="ios"/>
     </View>
 </Alloy>
