--- a/views/widget.xml
+++ b/views/widget.xml
@@ -1,5 +1,5 @@
 <Alloy>
     <View>
-        <Picker id="picker" selectionIndicator="true" onChange="triggerUpdate" platform="ios"/>
+        <Picker id="picker" selectionIndicator="true" onChange="triggerUpdate" />
     </View>
 </Alloy>
